<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.foros.ui</groupId>
    <artifactId>parent</artifactId>
    <version>trunk</version>
    <packaging>pom</packaging>

    <name>foros-ui parent POM</name>

    <properties>
        <spring.version>4.0.3.RELEASE</spring.version>
        <spring.security.version>3.2.3.RELEASE</spring.security.version>
        <asm.version>3.3.1</asm.version>
        <struts2.version>2.3.16.3</struts2.version>
        <ognl.version>3.0.6-FOROS-3</ognl.version>
        <tiles2.version>2.2.2</tiles2.version>
        <commons-io.version>2.0.1</commons-io.version>
        <maven-jar-plugin.version>2.2</maven-jar-plugin.version>
        <postgresql.version>9.4-1201-jdbc41</postgresql.version>
        <commons-logging.version>1.1</commons-logging.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
    </properties>

    <description>FOROS UI</description>

    <issueManagement>
        <system>jira</system>
        <url>https://jira.ocslab.com/browse/OUI</url>
    </issueManagement>

    <repositories>
        <repository>
            <!--Nexus web interface: http://maven.ocslab.com/nexus (login/passw: admin/sD17!)-->
            <id>central</id>
            <name>Internal Mirror of Central Repository</name>
            <url>http://maven.ocslab.com/repository</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <!--Nexus web interface: http://maven.ocslab.com/nexus (login/passw: admin/sD17!)-->
            <id>central</id>
            <name>Internal Mirror of Central Plugins Repository</name>
            <url>http://maven.ocslab.com/repository</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>

            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>2.7</version>
            </dependency>

            <dependency>
                <groupId>com.sun.jersey</groupId>
                <artifactId>jersey-server</artifactId>
                <version>1.11</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>com.sun.jersey</groupId>
                <artifactId>jersey-servlet</artifactId>
                <version>1.11</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>ognl</groupId>
                <artifactId>ognl</artifactId>
                <version>${ognl.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>jboss</groupId>
                        <artifactId>javassist</artifactId>
                    </exclusion>
                    <exclusion>
                        <artifactId>javassist</artifactId>
                        <groupId>javassist</groupId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>3.19.0-GA</version>
            </dependency>

            <dependency>
                <groupId>cglib</groupId>
                <artifactId>cglib</artifactId>
                <version>2.2.2</version>
            </dependency>

            <dependency>
                <groupId>asm</groupId>
                <artifactId>asm</artifactId>
                <version>${asm.version}</version>
            </dependency>

            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>1.2.13</version>
            </dependency>

            <dependency>
                <groupId>commons-lang</groupId>
                <artifactId>commons-lang</artifactId>
                <version>2.3</version>
            </dependency>

            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>1.8.0</version>
            </dependency>

            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi</artifactId>
                <version>3.9</version>
            </dependency>

            <dependency>
                <groupId>commons-collections</groupId>
                <artifactId>commons-collections</artifactId>
                <version>3.2</version>
            </dependency>

            <dependency>
                <artifactId>commons-lang3</artifactId>
                <groupId>org.apache.commons</groupId>
                <version>3.4</version>
            </dependency>

            <dependency>
                <groupId>commons-digester</groupId>
                <artifactId>commons-digester</artifactId>
                <version>2.0</version>
            </dependency>

            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>3.9-FOROS</version>
            </dependency>

            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>jstl</artifactId>
                <version>1.2</version>
            </dependency>

            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.5</version>
            </dependency>

            <dependency>
                <groupId>org.codehaus.jackson</groupId>
                <artifactId>jackson-core-asl</artifactId>
                <version>1.9.13</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.5.8</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-jdk14</artifactId>
                <version>1.5.8</version>
            </dependency>

            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>javax.ejb</artifactId>
                <version>3.1.1</version>
            </dependency>

            <dependency>
                <groupId>org.easymock</groupId>
                <artifactId>easymock</artifactId>
                <version>3.3.1</version>
            </dependency>

            <dependency>
                <groupId>org.jparsec</groupId>
                <artifactId>jparsec</artifactId>
                <version>2.2.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>DownloadSources</id>
            <activation>
                <property>
                    <name>downloadSources</name>
                    <value>true</value>
                </property>
            </activation>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <version>2.1-foros1</version>
                        <executions>
                            <execution>
                                <id>src-dependencies</id>
                                <phase>validate</phase>
                                <goals>
                                    <goal>resolve</goal>
                                    <!--<goal>resolve-plugins</goal>-->
                                </goals>
                                <configuration>
                                    <failBuild>false</failBuild>
                                    <failOnMissingClassifierArtifact>false</failOnMissingClassifierArtifact>
                                    <failOnWarning>false</failOnWarning>
                                    <classifier>sources</classifier>
                                    <outputDirectory>${project.build.directory}/../external/sources</outputDirectory>
                                    <markersDirectory>${project.build.directory}/../external/dependency-maven-plugin-markers</markersDirectory>
                                    <outputAbsoluteArtifactFilename>true</outputAbsoluteArtifactFilename>
                                    <excludeGroupIds>${pom.groupId}</excludeGroupIds>
                                    <excludeArtifactIds>asm,asm-analysis,asm-tree,appserv-ext,appserv-rt,appserv-deployment-client,javaee,stringtemplate,struts2-core,struts2-spring-plugin,struts2-tiles-plugin,commons-dbcp,itext,icu4j,kaptcha,axis-wsdl4j,ant,xmi,junit,log4j,ognl,javassist,ejb-api,antlr,commons-logging-api,freemarker,jstl,tiles-jsp,spring-web,standard</excludeArtifactIds>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>2.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>2.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.8</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <systemPropertyVariables>
                        <property>
                            <name>user.timezone</name>
                            <value>GMT</value>
                        </property>
                    </systemPropertyVariables>
                    <argLine>-XX:MaxPermSize=256m -Dfile.encoding=UTF-8</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
